--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@
 html, body {
     width: 100%;
     max-width: 100%;
+    min-width: auto;
+    overflow-x: hidden;
 }
  
  h1,
@@ -448,6 +450,7 @@ html, body {
     html, body {
         width: 100%;
         max-width: 100%;
+        overflow-x: hidden;
     }
     .col-md-7 h1 {
         margin-top: -50px;
