more touches to draft

--- a/css/style.css
+++ b/css/style.css
@@ -485,6 +485,18 @@ html, body {
     .about-img img {
         width: 80%;
     }
+    .contact-form a {
+        margin-bottom: 100%;
+    }
+    .h1-header {
+        font-size: 30px;
+        font-family: 'Alfa Slab One';
+     }
+     .p-info {
+        font-size: 10px;
+        font-family: 'Alfa Slab One';
+        margin-bottom: 50px;
+     }
  }
  .page-title .block {
    text-align: center;
@@ -2035,10 +2047,7 @@ html, body {
 
  .h1-header {
     padding: 20px;
-    border-color: red;
     font-family: 'Alfa Slab One';
-    border-bottom-width: 50px;
-
  }
  .p-info {
      padding: 20px;
