--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ html, body {
     min-width: auto;
     overflow-x: hidden;
 }
+
+:root {
+  --blue: #042d3f;
+  --white: #d5d7d9;
+}
  
  h1,
  h2,
@@ -119,7 +124,22 @@ html, body {
  .slick-slide {
    outline: 0;
  }
- 
+ .img-col img {
+  flex: 33.33%;
+  padding: 5px;
+  max-width: 200px;
+  max-height: 200px;
+border-radius: 100px;
+ }
+ .row {
+   justify-content: space-around;
+   display: flex;
+ }
+ .projects {
+   background-color: var(--blue);
+   color: var(--white);
+   border-radius: 30px;
+ }
 
 .section1-title h2 {
   text-transform: uppercase;
@@ -149,10 +169,10 @@ html, body {
 }
 
  .btn-main, .btn-small, .btn-transparent {
-   background: rgb(15, 0, 75);
-   color: rgb(255, 86, 86);
+   background: var(--blue);
+   color: var(--white);
    display: inline-block;
-   font-size: 30px;
+   font-size: 15px;
    letter-spacing: 1px;
    padding: 14px 35px;
    text-transform: uppercase;
@@ -169,6 +189,10 @@ html, body {
     color: rgb(255, 191, 191);
 }
  
+.message-container {
+  overflow-x: hidden; 
+  overflow-y: scroll;
+}
  .btn-solid-border {
    border: 1px solid #fff;
    background: transparent;
@@ -265,6 +289,7 @@ html, body {
 
  .contact-form {
     background-color: rgb(252, 252, 252);
+    font-family: 'Karla', sans-serif;
 }
 
  .poform input {
@@ -279,48 +304,6 @@ html, body {
      margin-bottom: -20px;
      margin-top: -40px;
  }
-
- .poform button {
-     text-align: center;
-    background: rgb(15, 0, 75);
-    color: rgb(255, 86, 86);
-    border-radius: 100px;
-    display: inline-block;
-    font-size: 30px;
-    letter-spacing: 1px;
-    height: 50px;
-    width: 130px;
-    border-radius: var(--num-cols);
-    transition: all 0.2s ease;
-    border-radius: 10px;
- }
- .contact-form a {
-    vertical-align: middle;
-    text-align: center;
-   background: rgb(15, 0, 75);
-   color: rgb(255, 86, 86);
-   border-radius: 100px;
-   display: inline-block;
-   font-size: 30px;
-   letter-spacing: 1px;
-   height: 55px;
-   width: 200px;
-   border-radius: var(--num-cols);
-   transition: all 0.2s ease;
-   border-radius: 10px;
-}
- .poform button {
-    text-align: center;
- }
-
- .poform button:hover {
-    background: rgba(15, 0, 75, 0.613);
-    color: rgb(255, 191, 191);
-}
-.contact-form a:hover {
-    background: rgba(15, 0, 75, 0.613);
-    color: rgb(255, 191, 191);
-}
 
  .bg-shadow {
    background-color: #fff;
@@ -720,6 +703,7 @@ html, body {
 
  .overly, .slider, .page-title {
    position: relative;
+   padding: 70px;
  }
  .overly:before, .slider:before, .page-title:before {
    content: "";
@@ -729,13 +713,8 @@ html, body {
    bottom: 0;
    right: 0;
    width: 100%;
-   height: 100%;
-   background: rgb(240, 240, 240);
+   background: var(--white);
    opacity: 0.4;
-   background-image: url(../images/bbfield.jpg);
-   background-repeat: repeat;
-   background-size: cover;
-   justify-content: space-between;
  }
  
  .owl-dots .owl-dot.active span,
@@ -886,7 +865,7 @@ html, body {
      Header Start 
  --*/
  header {
-   background: rgb(30, 0, 149);
+   background: #042d3f;
    padding: 20px 0;
    width: 100%;
  }
@@ -920,7 +899,7 @@ html, body {
    padding-right: 20px;
 
    padding-bottom: 50px;
-   background: #041E42;
+   background: var(--blue);
  }
  .footer1 p {
    color: rgba(255, 255, 255, 0.683);
@@ -940,7 +919,7 @@ html, body {
   color: rgba(255, 255, 255, 0.683);
 }
 .footer1 b {
-    color: #ff6b6b;
+    color: var(--white);
   }
 .footer1 ul {
   color: white;
@@ -959,7 +938,7 @@ html, body {
  }
  
  .navigation {
-   background: #041E42;
+   background: #042d3f;
    padding: 20px 0;
  }
  .navigation .navbar {
@@ -991,10 +970,10 @@ html, body {
    }
  }
  .navigation .navbar .navbar-nav > li > a {
-   color: #a0a0a0;
+   color: var(--white);
    padding: 10px 15px;
    font-weight: 500;
-   font-size: 30px;
+   font-size: 20px;
    text-transform: uppercase;
    transition: 0.3s;
  }
@@ -1129,12 +1108,11 @@ html, body {
    background-size: cover;
    background-attachment: fixed;
    background-position: 0% 0%;
-   padding: 140px 0;
    position: relative;
  }
  @media (max-width: 992px) {
    .slider {
-     padding: 150px 0;
+     padding: 70px 0;
    }
  }
  .slider .block {
@@ -1143,22 +1121,17 @@ html, body {
  }
 
  .slider .block h1 {
-   font-size: 50;
-   letter-spacing: 5px;
-   padding-bottom: 15px;
-   text-transform: uppercase;
-   font-family: 'Alfa Slab One';
-   border-bottom: red;
-   border-width: 3px;
+   margin-bottom: -10px;
+   font-weight: bold;
+   font-family: 'Karla';
 
  }
  .slider .block h2 {
     font-size: 30;
-    letter-spacing: 5px;
-    padding-bottom: 15px;
-    text-transform: uppercase;
-    font-family: 'Alfa Slab One';
-
+    padding-bottom: 10px;
+    padding-top: 7px;
+    font-style: italic;
+    font-family: 'Karla', sans-serif;
  
   }
  @media (max-width: 992px) {
@@ -1706,17 +1679,9 @@ html, body {
    vertical-align: middle;
  }
  @media (max-width: 480px) {
-   .product-modal .modal-dialog {
-     width: 100%;
+   .slider {
+     padding: 20px;
    }
-   .contact-frame {
-    display: block;
-    margin-left: 25px;
-    margin-right: auto;
-    padding-bottom: 10px;
-    margin-top: -30px;
-    overflow: hidden;
-  }
  }
  @media (max-width: 768px) {
    .product-modal .modal-dialog {
@@ -2050,11 +2015,12 @@ html, body {
 
  .h1-header {
     padding: 20px;
-    font-family: 'Alfa Slab One';
+    font-family: 'Karla', sans-serif;
+    font-weight: bold;
  }
  .p-info {
      padding: 20px;
-     font-family: 'Signika Negative', sans-serif;
+     font-family: 'Karla', sans-serif;
      color: black;
  }
  .h1ty-header {
