--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,45 @@ border-radius: 100px;
   padding-bottom: 0px;
   margin-bottom: -70px;
 }
+.projects {
+  padding: 30px;
+}
+.project {
+  width: 100%;
+  min-width: 350px;
+  background-color: var(--white);
+  border-radius: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.project:hover {
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8);
+}
+
+.project img {
+  max-width:100%;
+  max-height:100%;
+  padding: 10px;
+  border-radius: 20px;
+}
+.project-h1 {
+  color: var(--blue);
+  font-family: 'Karla';
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: -6px;
+  text-align: center;
+}
+.project-p {
+  color: var(--blue);
+  font-family: 'Karla';
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 17px;
+
+}
+
 
  .btn-main, .btn-small, .btn-transparent {
    background: var(--blue);
@@ -288,16 +327,22 @@ border-radius: 100px;
  }
 
  .contact-form {
-    background-color: rgb(252, 252, 252);
+    background-color: var(--white);
+    margin-top: 35px;
+    border-top-left-radius: 35px;
+    border-top-right-radius: 35px;
+
     font-family: 'Karla', sans-serif;
 }
 
  .poform input {
+   border-radius: 6px;
      align-items: center;
      text-align: center;
      height: 30px;
      width: 70%;
      margin-bottom: 15px;
+     border-width: 1px;
  }
 
  .contact-form h1 {
@@ -329,6 +374,16 @@ border-radius: 100px;
  
  .bg-dark {
    background: #202122 !important;
+ }
+
+ .skills li {
+  font-family: 'Karla';
+  display: inline-block;
+  content: "\f00c";
+
+ }
+ .skills li::before {
+   content: "✓ "
  }
  
  .section {
@@ -703,7 +758,6 @@ border-radius: 100px;
 
  .overly, .slider, .page-title {
    position: relative;
-   padding: 70px;
  }
  .overly:before, .slider:before, .page-title:before {
    content: "";
@@ -715,11 +769,15 @@ border-radius: 100px;
    width: 100%;
    background: var(--white);
    opacity: 0.4;
+   border-bottom-left-radius: 40px;
+   border-bottom-right-radius: 40px;
  }
  
  .owl-dots .owl-dot.active span,
  .owl-theme .owl-dots .owl-dot:hover span {
    background: #655E7A !important;
+   border-bottom-left-radius: 30px;
+   border-bottom-right-radius: 30px;
  }
  
  #success,
