--- a/css/style.css
+++ b/css/style.css
@@ -171,12 +171,11 @@ border-radius: 100px;
   padding: 30px;
 }
 .project {
-  width: 100%;
-  min-width: 320px;
   background-color: var(--white);
   border-radius: 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   transition: box-shadow 0.3s ease-in-out;
+  height: 420px;
 }
 
 .project:hover {
@@ -184,10 +183,11 @@ border-radius: 100px;
 }
 
 .project img {
-  max-width:100%;
-  max-height:100%;
+  max-width:400px;
+  max-height:200px;
   padding: 10px;
   border-radius: 20px;
+  object-fit: cover;
 }
 .project-h1 {
   color: var(--blue);
